# serialport-hci

./: COPYING.MIT  Cargo.toml  README.md
examples/: eddystone.rs  stop_advertising.rs
src/: lib.rs
