[package]
name = "serialport-hci"
description = "Driver for serial-connected Bluetooth HCI controllers for use with bluetooth-hci"
version = "0.1.0"
edition = "2018"
authors = ["Michael Farrell <micolous+git@gmail.com>"]
categories = ["hardware-support"]
keywords = ["ble", "bluetooth"]
license = "MIT/Apache-2.0"
repository = "https://github.com/micolous/serialport-hci"
readme = "README.md"

[dependencies]
nb = "0.1.2"
# bluetooth-hci = "0.1.0"
bluetooth-hci = { path = "../bluetooth-hci" }
serialport = "4.2.0"

[dev-dependencies]
rand = "0.8.5"
